2006-01-13  Vivien Malerba <malerba@gnome-db.org>

	* providers/sqlite/gda-sqlite-recordset.c: fixed a bug with empty result sets
	* doc/C/libgda-sections.txt: fixed bugs which prevented documentation generation
	* libgda/*: bug fixes

2006-01-11  Vivien Malerba <malerba@gnome-db.org>

	* Merged all the GnomeDb objects which do not depend on GTK+
	  API and ABI have been changed

2005-11-16  Cygwin Ports Maintainer <yselkowitz@users.sourceforge.net>

	* configure.in: changed to check for the correct shared library
	extensions depending on the system.

	* libgda/Makefile.am:
	* libsql/Makefile.am:
	* providers/bdb/Makefile.am:
	* providers/freetds/Makefile.am:
	* providers/ldap/Makefile.am:
	* providers/mdb/Makefile.am:
	* providers/odbc/Makefile.am:
	* providers/postgres/Makefile.am:
	* providers/sqlite/Makefile.am:
	* providers/xbase/Makefile.am:
	* report/libgda-report/Makefile.am: use -no-undefined in $LDFLAGS for
	Cygwin compilation.

	* providers/mdb/gda-mdb.h: fixed order of included headers.

	* providers/odbc/gda-odbc.h:
	* providers/odbc/gda-odbc-provider.h: include windows.h if running
	on Cygwin.

	* providers/postgres/utils.c (gda_postgres_set_value): fixed typo.

2005-11-02  Bob Ham <rah@bash.sh>

	* libsql/Makefile.am: fixes for building out of the source tree.

2005-10-27  Leonardo Boshell <p@kapcoweb.com>

	* configure.in: check for explicit FreeTDS 0.63 version.

	* providers/freetds/gda-freetds-provider.h: if using FreeTDS 0.63,
	define some missing macros.

2005-10-27  Juan Manuel Mouriz <jmouriz@gmail.com>

	* doc/C/libgda-docs.sgml: fixed example code.

2005-10-26  Murray Cumming <murrayc@murrayc.com>

	* libgda/gda-threader.c: (gda_threader_new):
	* libgda/gda-threader.h: Rename GDA_THREADER_TYPE to 
	GDA_TYPE_THREADER, so it matches the convention, for 
	language bindings, though I am not sure if this is public 
	API anyway.

2005-10-26  Martin Schulze <joey@infodrom.org>
