@@ -1,5 +1,5 @@
 m4_define(major, 1)
-m4_define(minor, 3)
+m4_define(minor, 9)
 m4_define(micro, 102)
 
 AC_INIT(GNU Data Access, major.minor.micro, gnome-db-list@gnome.org, libgda)
